--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El blog de David</title>
 </head>
 <body>
-    hola mi nombre es david achury
+    
+<h1>
+    Curso esencial de HTML y CSS
+
+</h1>
+<p>
+    Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.  
+</p>
+  <img src="images/google-chrome.png" alt="logo de google-chrome" title="Logo de google-chrome"> 
+  <img src="images/visual-studio.png" alt="logo de visual-studio" title="Logo de visual-studio"> 
+  <img src="images/figma.png" alt="logo de figma" title=" logo de figma"> 
+  <img src="images/github.png" alt="logo de github" title=" logo de github"> 
+
+    
 </body>
 </html>
